--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,13 @@
   "dependencies": {
     "@deepgram/sdk": "^4.11.2",
     "@google-cloud/speech": "^7.2.0",
-    "dotenv": "^17.2.2",
+    "@google-cloud/translate": "^9.2.1",
+    "axios": "^1.13.1",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "firebase-admin": "^13.5.0",
     "openai": "^5.19.1",
-    "twilio": "^5.10.1",
+    "twilio": "^5.10.4",
     "ws": "^8.18.3"
   }
 }
